Add phase A/B/C power

--- a/spec/cassettes/influx-success.yml
+++ b/spec/cassettes/influx-success.yml
@@ -5,7 +5,8 @@ http_interactions:
     uri: http://<INFLUX_HOST>:8086/api/v2/write?bucket=<INFLUX_BUCKET>&org=<INFLUX_ORG>&precision=s
     body:
       encoding: UTF-8
-      string: my-shelly-measurement power=54.371,response_duration=46i,temp=48.0 1708490380
+      string: my-shelly-measurement power=704.699,power_a=263.6,power_b=234.2,power_c=207.0,response_duration=44i,temp=48.0
+        1708490963
     headers:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
@@ -27,9 +28,9 @@ http_interactions:
       X-Influxdb-Version:
       - v2.7.5
       Date:
-      - Wed, 21 Feb 2024 04:39:40 GMT
+      - Wed, 21 Feb 2024 04:49:24 GMT
     body:
       encoding: UTF-8
       string: ''
-  recorded_at: Wed, 21 Feb 2024 04:39:40 GMT
+  recorded_at: Wed, 21 Feb 2024 04:49:24 GMT
 recorded_with: VCR 6.2.0
