Remove unneeded files from Docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,15 @@
+.dockerignore
+.env
+.env.*
 .git
+.gitattributes
 .github
 .gitignore
-.env.*
-.env
+.rspec
+.rubocop.yml
+.vscode
 compose.yml
-spec
-Rakefile
 Dockerfile
+Guardfile
+Rakefile
+spec
