--- a/spec/cassettes/shelly-plug-s.yml
+++ b/spec/cassettes/shelly-plug-s.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Faraday v2.10.1
+      - Faraday v2.12.0
   response:
     status:
       code: 200
@@ -17,7 +17,7 @@ http_interactions:
       content-type:
       - application/json
       content-length:
-      - '691'
+      - '700'
       server:
       - ShellyHTTP/1.0.0
       connection:
@@ -25,9 +25,9 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"ble":{},"cloud":{"connected":true},"mqtt":{"connected":false},"plugs_ui":{},"switch:0":{"id":0,
-        "source":"init", "output":true, "apower":0.1, "voltage":236.1, "current":0.000,
-        "aenergy":{"total":26204.253,"by_minute":[0.000,0.000,0.000],"minute_ts":1724218200},"temperature":{"tC":39.7,
-        "tF":103.5}},"sys":{"mac":"FCB467272FA0","restart_required":false,"time":"07:30","unixtime":1724218213,"uptime":1492,"ram_size":253812,"ram_free":134940,"fs_size":393216,"fs_free":102400,"cfg_rev":31,"kvs_rev":0,"schedule_rev":1,"webhook_rev":0,"available_updates":{},"reset_reason":3},"wifi":{"sta_ip":"192.168.178.88","status":"got
-        ip","ssid":"FRITZ!Box 4060 RX","rssi":-74},"ws":{"connected":false}}'
-  recorded_at: Wed, 21 Aug 2024 05:30:13 GMT
+        "source":"init", "output":true, "apower":74.9, "voltage":234.6, "current":0.051,
+        "aenergy":{"total":34100.726,"by_minute":[775.992,737.589,656.609],"minute_ts":1727340720},"temperature":{"tC":39.4,
+        "tF":102.9}},"sys":{"mac":"FCB467272FA0","restart_required":false,"time":"10:52","unixtime":1727340759,"uptime":3124102,"ram_size":253764,"ram_free":134512,"fs_size":393216,"fs_free":94208,"cfg_rev":31,"kvs_rev":0,"schedule_rev":1,"webhook_rev":0,"available_updates":{},"reset_reason":3},"wifi":{"sta_ip":"192.168.178.88","status":"got
+        ip","ssid":"FRITZ!Box 4060 RX","rssi":-67},"ws":{"connected":false}}'
+  recorded_at: Thu, 26 Sep 2024 08:52:39 GMT
 recorded_with: VCR 6.3.1
