Add support for Gen1 devices
Belong to #90

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # IP of your Shelly device
 SHELLY_HOST=192.168.1.1
 
+# Generation of your Shelly device (1 or 2, default is 2)
+SHELLY_GEN=2
+
 # Interval in seconds to get data from Shelly
 SHELLY_INTERVAL=5
 
